WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104722
-webkit-svg-shadow radius changes don't cause children's boundaries to be recomputed
https://bugs.webkit.org/show_bug.cgi?id=104722
Summary
-webkit-svg-shadow radius changes don't cause children's boundaries to be rec...
Tim Horton
Reported
2012-12-11 14:48:34 PST
Created
attachment 178884
[details]
repro There's a note in SVGRenderStyle::diff(): // Shadow changes require relayouts, as they affect the repaint rects. And it then returns StyleDifferenceLayout. Then, RenderSVGModelObject::styleWillChange() (and friends) marks the boundaries dirty when it gets that StyleDifferenceLayout. But! We also need to our children's boundaries as dirty, since the parent's shadow is baked into them. I have a patch to recursively dirty children's boundaries if the old and/or new style has a -webkit-svg-shadow which fixes the attached testcase. Not sure if that hammer is too big, though. <
rdar://problem/12821080
>
Attachments
repro
(928 bytes, text/html)
2012-12-11 14:48 PST
,
Tim Horton
no flags
Details
patch
(6.03 KB, patch)
2012-12-11 16:24 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
patch
(8.25 KB, patch)
2012-12-11 17:07 PST
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2012-12-11 16:24:59 PST
Created
attachment 178912
[details]
patch Next, to write a test.
Tim Horton
Comment 2
2012-12-11 17:07:24 PST
Created
attachment 178924
[details]
patch
Tim Horton
Comment 3
2012-12-11 17:16:15 PST
http://trac.webkit.org/changeset/137393
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug