-webkit-svg-shadow radius changes don't cause children's boundaries to be recomputed https://bugs.webkit.org/show_bug.cgi?id=104722 <rdar://problem/12821080>

Reviewed by Simon Fraser.

Changes to -webkit-svg-shadow currently cause a relayout of the directly affected renderer
and its parents, but not its children. However, children have the shadow radius
baked into their cached boundaries, so these need to be invalidated.

Test: svg/repaint/repaint-webkit-svg-shadow-container.html

* rendering/RenderObject.h: Expose needsBoundariesUpdate().
* rendering/svg/RenderSVGContainer.h: Expose needsBoundariesUpdate().
* rendering/svg/RenderSVGImage.h: Expose needsBoundariesUpdate().
* rendering/svg/RenderSVGRoot.h: Expose needsBoundariesUpdate().
* rendering/svg/RenderSVGShape.h: Expose needsBoundariesUpdate().
* rendering/svg/SVGRenderSupport.cpp:
(WebCore::SVGRenderSupport::layoutChildren): If the renderer has a shadow and
is in need of a boundaries update, mark children as needing boundaries updates too.

Add a text repaint test that ensures that a child (a path, in this case)
recomputes its bounds after its parent's shadow is expanded.

* svg/repaint/repaint-webkit-svg-shadow-container-expected.txt: Added.
* svg/repaint/repaint-webkit-svg-shadow-container.html: Added.


Canonical link: https://commits.webkit.org/122948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137393 268f45cc-cd09-0410-ab3c-d52691b4dbfc